위 업데이트 사항 그대로 반영확인한후 재저장

--- a/crawling_project/crawling_toy_project_review.ipynb
+++ b/crawling_project/crawling_toy_project_review.ipynb
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "399ae2c2",
+   "id": "a77f354a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,8 +838,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "7ccb1c0e",
+   "execution_count": 23,
+   "id": "fe71c15f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
     "soup = BeautifulSoup(res.content, 'html.parser')\n",
     "titles = soup.select('div.list_item')\n",
     "index = 0\n",
-    "row = 3\n",
+    "row = 2\n",
     "\n",
     "#다섯개만 가져오기\n",
     "for title in titles[3:9]:\n",
@@ -915,9 +915,9 @@
     "            \n",
     "        except Exception as e:\n",
     "            if title_replies == None:\n",
-    "                title_data =[index,title_text.get_text().strip(),\"댓글수 :\",0,\"\\n\",\"링크 :\"]\n",
+    "                title_data =[index,title_text.get_text().strip(),\"댓글수 :\",0]\n",
     "                excel_sheet.append(title_data)\n",
-    "                excel_sheet.cell(row=row,column = ).hyperlink = title_link_url\n",
+    "                excel_sheet.cell(row=row,column = 2).hyperlink = title_link_url\n",
     "                #두번째 row를 for문을 통해서 정렬과,bold\n",
     "            for cell in excel_sheet[row]:\n",
     "                cell.alignment = wrap_alignment\n",
@@ -948,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "095238bf",
+   "id": "2cbb82dd",
    "metadata": {},
    "outputs": [],
    "source": []
