SQL 구문 업로드, CLI 활용하여 DDL,DML 작성하기 연습

--- a/RDBMS/mysql_basic.ipynb
+++ b/RDBMS/mysql_basic.ipynb
@@ -880,9 +880,9 @@
    "metadata": {},
    "source": [
     "<pre>\n",
-    "SELECT * FROM mytable WHERE model_num LIKE '7700%'\n",
-    "SELECT * FROM mytable WHERE name LIKE '%i7%'\n",
-    "SELECT * FROM mytable WHERE model_type LIKE '%카바레이크%' LIMIT 1\n",
+    "SELECT * FROM model_info WHERE model_num LIKE '7700%'\n",
+    "SELECT * FROM model_info WHERE name LIKE '%i7%'\n",
+    "SELECT * FROM model_info WHERE model_type LIKE '%kaby Lake%' LIMIT 1\n",
     "</pre>"
    ]
   },
@@ -905,14 +905,14 @@
     "</pre>\n",
     "<pre>\n",
     "예)\n",
-    "mysql> SELECT * FROM mytable;\n",
+    "mysql> SELECT * FROM model_info;\n",
     "+----+------+-----------+------------+\n",
     "| id | name | model_num | model_type |\n",
     "+----+------+-----------+------------+\n",
     "|  3 | i7   | 7700      | Kaby Lake  |\n",
     "+----+------+-----------+------------+\n",
-    "mysql> UPDATE mytable SET name = 'i5', model_num = '5500' WHERE id = 3;\n",
-    "mysql> SELECT * FROM mytable;\n",
+    "mysql> UPDATE model_info SET name = 'i5', model_num = '5500' WHERE id = 3;\n",
+    "mysql> SELECT * FROM model_info;\n",
     "+----+------+-----------+------------+\n",
     "| id | name | model_num | model_type |\n",
     "+----+------+-----------+------------+\n",
@@ -1139,7 +1139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.13"
   },
   "nbTranslate": {
    "displayLangs": [
