pymysql 활용 연습 업로드

--- a/RDBMS/pymysql_basic.ipynb
+++ b/RDBMS/pymysql_basic.ipynb
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,8 +372,8 @@
     "db = pymysql.connect(\n",
     "    host='localhost', \n",
     "    port=3306, \n",
-    "    user='funcoding', \n",
-    "    passwd='funcoding', \n",
+    "    user='root', \n",
+    "    passwd='1234', \n",
     "    db='ecommerce', \n",
     "    charset='utf8')\n",
     "\n",
@@ -415,9 +415,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INSERT INTO product VALUES('215673141',\n",
+      "    '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F'\n",
+      "    );\n",
+      "    \n",
+      "INSERT INTO product VALUES('215673142',\n",
+      "    '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F'\n",
+      "    );\n",
+      "    \n",
+      "INSERT INTO product VALUES('215673143',\n",
+      "    '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F'\n",
+      "    );\n",
+      "    \n",
+      "INSERT INTO product VALUES('215673144',\n",
+      "    '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F'\n",
+      "    );\n",
+      "    \n",
+      "INSERT INTO product VALUES('215673145',\n",
+      "    '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F'\n",
+      "    );\n",
+      "    \n",
+      "INSERT INTO product VALUES('215673146',\n",
+      "    '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F'\n",
+      "    );\n",
+      "    \n",
+      "INSERT INTO product VALUES('215673147',\n",
+      "    '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F'\n",
+      "    );\n",
+      "    \n",
+      "INSERT INTO product VALUES('215673148',\n",
+      "    '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F'\n",
+      "    );\n",
+      "    \n",
+      "INSERT INTO product VALUES('215673149',\n",
+      "    '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F'\n",
+      "    );\n",
+      "    \n",
+      "INSERT INTO product VALUES('215673150',\n",
+      "    '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F'\n",
+      "    );\n",
+      "    \n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 라이브러리 가져오기\n",
     "import pymysql\n",
@@ -426,8 +473,8 @@
     "db = pymysql.connect(\n",
     "    host='localhost', \n",
     "    port=3306, \n",
-    "    user='funcoding', \n",
-    "    passwd='funcoding', \n",
+    "    user='root', \n",
+    "    passwd='1234', \n",
     "    db='ecommerce', \n",
     "    charset='utf8')\n",
     "\n",
@@ -437,7 +484,7 @@
     "for index in range(10):\n",
     "    product_code = 215673140 + index + 1\n",
     "    SQL = \"\"\"INSERT INTO product VALUES('\"\"\" + str(product_code) + \"\"\"',\n",
-    "    '스위트바니 여름신상5900원~롱원피스티셔츠/긴팔/반팔', 23000, 6900, 70, 'F'\n",
+    "    '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F'\n",
     "    );\n",
     "    \"\"\"\n",
     "    print(SQL)\n",
@@ -496,23 +543,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('215673141', '스위트바니 여름신상5900원~롱원피스티셔츠/긴팔/반팔', 23000, 6900, 70, 'F')\n",
-      "('215673142', '스위트바니 여름신상5900원~롱원피스티셔츠/긴팔/반팔', 23000, 6900, 70, 'F')\n",
-      "('215673143', '스위트바니 여름신상5900원~롱원피스티셔츠/긴팔/반팔', 23000, 6900, 70, 'F')\n",
-      "('215673144', '스위트바니 여름신상5900원~롱원피스티셔츠/긴팔/반팔', 23000, 6900, 70, 'F')\n",
-      "('215673145', '스위트바니 여름신상5900원~롱원피스티셔츠/긴팔/반팔', 23000, 6900, 70, 'F')\n",
-      "('215673146', '스위트바니 여름신상5900원~롱원피스티셔츠/긴팔/반팔', 23000, 6900, 70, 'F')\n",
-      "('215673147', '스위트바니 여름신상5900원~롱원피스티셔츠/긴팔/반팔', 23000, 6900, 70, 'F')\n",
-      "('215673148', '스위트바니 여름신상5900원~롱원피스티셔츠/긴팔/반팔', 23000, 6900, 70, 'F')\n",
-      "('215673149', '스위트바니 여름신상5900원~롱원피스티셔츠/긴팔/반팔', 23000, 6900, 70, 'F')\n",
-      "('215673150', '스위트바니 여름신상5900원~롱원피스티셔츠/긴팔/반팔', 23000, 6900, 70, 'F')\n"
+      "('215673141', '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F')\n"
      ]
     }
    ],
@@ -524,8 +562,93 @@
     "db = pymysql.connect(\n",
     "    host='localhost', \n",
     "    port=3306, \n",
-    "    user='funcoding', \n",
-    "    passwd='funcoding', \n",
+    "    user='root', \n",
+    "    passwd='1234', \n",
+    "    db='ecommerce', \n",
+    "    charset='utf8')\n",
+    "\n",
+    "# 3. 커서 가져오기\n",
+    "cursor = db.cursor()\n",
+    "SQL = \"SELECT * FROM product\"\n",
+    "cursor.execute(SQL)\n",
+    "rows = cursor.fetchone()\n",
+    "print(rows)\n",
+    "\n",
+    "# 7. DB 연결 닫기\n",
+    "db.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(('215673141', '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F'), ('215673142', '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F'), ('215673143', '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F'), ('215673144', '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F'), ('215673145', '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F'))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. 라이브러리 가져오기\n",
+    "import pymysql\n",
+    "\n",
+    "# 2. 접속하기\n",
+    "db = pymysql.connect(\n",
+    "    host='localhost', \n",
+    "    port=3306, \n",
+    "    user='root', \n",
+    "    passwd='1234', \n",
+    "    db='ecommerce', \n",
+    "    charset='utf8')\n",
+    "\n",
+    "# 3. 커서 가져오기\n",
+    "cursor = db.cursor()\n",
+    "SQL = \"SELECT * FROM product\"\n",
+    "cursor.execute(SQL)\n",
+    "rows = cursor.fetchmany(5)\n",
+    "print(rows)\n",
+    "\n",
+    "# 7. DB 연결 닫기\n",
+    "db.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('215673141', '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F')\n",
+      "('215673142', '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F')\n",
+      "('215673143', '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F')\n",
+      "('215673144', '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F')\n",
+      "('215673145', '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F')\n",
+      "('215673146', '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F')\n",
+      "('215673147', '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F')\n",
+      "('215673148', '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F')\n",
+      "('215673149', '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F')\n",
+      "('215673150', '스위트바니 여름신상59000원~롱원피스티셔츠/긴팔/반팔', 53000, 15900, 30, 'F')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. 라이브러리 가져오기\n",
+    "import pymysql\n",
+    "\n",
+    "# 2. 접속하기\n",
+    "db = pymysql.connect(\n",
+    "    host='localhost', \n",
+    "    port=3306, \n",
+    "    user='root', \n",
+    "    passwd='1234', \n",
     "    db='ecommerce', \n",
     "    charset='utf8')\n",
     "\n",
@@ -549,6 +672,79 @@
     "  - Cursor Object 가져오기: cursor = db.cursor()  \n",
     "  - SQL 실행하기: cursor.execute(SQL)\n",
     "  - 실행 mysql 서버에 확정 반영하기: db.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    CREATE TABLE product (\n",
+      "        PRODUCT_CODE VARCHAR(20) NOT NULL,\n",
+      "        TITLE VARCHAR(200) NOT NULL,\n",
+      "        ORI_PRICE INT,\n",
+      "        DISCOUNT_PRICE INT,\n",
+      "        DISCOUNT_PERCENT INT,\n",
+      "        DELIVERY VARCHAR(2),\n",
+      "        PRIMARY KEY(PRODUCT_CODE)\n",
+      "    );\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1. 라이브러리 가져오기\n",
+    "import pymysql\n",
+    "\n",
+    "# 2. 접속하기\n",
+    "db = pymysql.connect(\n",
+    "    host='localhost', \n",
+    "    port=3306, \n",
+    "    user='root', \n",
+    "    passwd='1234', \n",
+    "    db='ecommerce', \n",
+    "    charset='utf8')\n",
+    "\n",
+    "# 3. 커서 가져오기\n",
+    "cursor = db.cursor()\n",
+    "SQL = \"\"\"\n",
+    "    update product set\n",
+    "    title = '한여름 쿨링 티셔츠',\n",
+    "    ori_price = 29000,\n",
+    "    discount_price=9000,\n",
+    "    discount_percent=30\n",
+    "    where product_code='215673141'\n",
+    "\"\"\"\n",
+    "print(sql)\n",
+    "cursor.execute(SQL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#완료후 commit()으로 업데이트 commit\n",
+    "db.commit()\n",
+    "db.close()"
    ]
   },
   {
@@ -595,6 +791,72 @@
     "  - Cursor Object 가져오기: cursor = db.cursor()  \n",
     "  - SQL 실행하기: cursor.execute(SQL)\n",
     "  - 실행 mysql 서버에 확정 반영하기: db.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    CREATE TABLE product (\n",
+      "        PRODUCT_CODE VARCHAR(20) NOT NULL,\n",
+      "        TITLE VARCHAR(200) NOT NULL,\n",
+      "        ORI_PRICE INT,\n",
+      "        DISCOUNT_PRICE INT,\n",
+      "        DISCOUNT_PERCENT INT,\n",
+      "        DELIVERY VARCHAR(2),\n",
+      "        PRIMARY KEY(PRODUCT_CODE)\n",
+      "    );\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1. 라이브러리 가져오기\n",
+    "import pymysql\n",
+    "\n",
+    "# 2. 접속하기\n",
+    "db = pymysql.connect(\n",
+    "    host='localhost', \n",
+    "    port=3306, \n",
+    "    user='root', \n",
+    "    passwd='1234', \n",
+    "    db='ecommerce', \n",
+    "    charset='utf8')\n",
+    "\n",
+    "# 3. 커서 가져오기\n",
+    "cursor = db.cursor()\n",
+    "SQL = \"\"\"\n",
+    "    delete from product\n",
+    "    where product_code='215673141'\n",
+    "\"\"\"\n",
+    "print(sql)\n",
+    "cursor.execute(SQL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.commit()\n",
+    "db.close()"
    ]
   },
   {
